--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en-ca"
 <head>
   <meta charset="utf-8"
-  <title>Beetroot (Beta vulgaris)</title>
+  <title></title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href=css/main.css" rel="stylesheet">
 </head>
 <body>
   <header>
+    <h1>Beetroot (Beta vulgaris)</h1>
     <nav>
         <li>Common varieties</li>
         <li>Nutritional informatin</li>
@@ -16,4 +17,16 @@
     <figcaption class="intro">A bundle of organic beets from a local farm food co-op program.</figcaption>
     </nav>
   </header>
+  <main>
+  <h1>55 to 65 days are needed from germination to harvest of the roots.</h1>
+  <nav>
+    <li>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as after cooking and adding oil and vinegar,or raw and shredded, either alone or combined with any salad vegetable.</li>
+    <li></li>
+    <li>In fact, Jim Halpert once said this about beets,""Fact, bears eat beets. Bears, beets, Battlestar Galactica</li>
+  </nav>
+    <div class="dfn">
+      <p>I have some weird habits. For instance, Ilove beets. Show me a salad bar and I will clean them out of their beets.</p>
+      <figcaption>- Cris Pratt</figcaption>
+    </div>
+  </main>
 </body>
