--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
   <main>
     <figure>
-      <figcaption>A bundle of beetroot</figcaption>
       <img src="images/beets.jpg" alt="">
+      <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
-    <p>A bundle of organic beets from a local farm food co-op program.</p>
-    <p>the 55 to 65 days are needed from germination to harvest of the root.</p>
+    <p>55 to 65 days are needed from germination to harvest of the root.</p>
+    <p></p>
     <p>The usually deep purple roots of <strong>beetroot</strong> are eaten either griled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded,either alone or combined with any salad vegetable.</p>
     <p>In fact, Jim Halpert once said this about beets, <q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q></p>
     <blockquote>
       <p>I have some <em>weird</em> habits. For instance, <b>I love beets.</b> Show me a salad bar and I will clean them out of their beets.</p>
       <cite>-Chris Pratt</cite>
     </blockquote>
-    <h2>Common varieties</h2>
+    <h1>Common varieties</h1>
     <dl>
       <li>α. Albino</li>
       <li>β. Bull's Blood</li>
@@ -38,7 +38,7 @@
       <li>δ. Detroit Dark Red</li>
       <li>ε.Early Wonder</li>
     </dl>
-    <h2>Nutritional information</h2>
+    <h1>Nutritional information</h1>
     <p>Serving Size<data value="100">100 g</data></p>
     <dl>
       <dt>Energy:</dt>
@@ -53,7 +53,7 @@
 
   </main>
   <aside>
-    <h2>Tags</h2>
+    <h1>Tags</h1>
     <ul>
       <li>Crimson</li>
       <li>Awesome</li>
