--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <meta charset="utf-8">
   <title>Beetroot</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700|PT+Serif:400,400i,700" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Beetroot (Beta vulgaris)</h1>
     <nav>
-      <dl>
+      <ol>
         <li><a href="#">Common varieties</a></li>
         <li><a href="#">Nutritional information</a></li>
         <li><a href="#">Tag</a></li>
-      </dl>
+      </ol>
     </nav>
   </header>
 
@@ -31,13 +33,13 @@
       <cite>-Chris Pratt</cite>
     </blockquote>
     <h1>Common varieties</h1>
-    <dl>
-      <li>α. Albino</li>
-      <li>β. Bull's Blood</li>
-      <li>γ. Chioggia</li>
-      <li>δ. Detroit Dark Red</li>
-      <li>ε.Early Wonder</li>
-    </dl>
+    <ol>
+      <li>Albino</li>
+      <li>Bull's Blood</li>
+      <li>Chioggia</li>
+      <li>Detroit Dark Red</li>
+      <li>Early Wonder</li>
+    </ol>
     <h1>Nutritional information</h1>
     <p>Serving Size<data value="100">100 g</data></p>
     <dl>
