--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
       <li>Detroit Dark Red</li>
       <li>Early Wonder</li>
     </ol>
-    <h1>Nutritional information</h1>
-    <p>Serving Size<data value="100">100 g</data></p>
-    <dl>
+    <h2>Nutritional information</h2>
+    <dl class="serving">
+      <dt>Serving Size</dt>
+      <dd><data value="100">100 g</data></dd>
+    </dl>
+
+<dl class="dl-2">
       <dt>Energy:</dt>
       <dd>180 kJ</dd>
       <dt>Carbohydrates:</dt>
